--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>散桩厂家联调测试</title>
+    <title>elec</title>
   </head>
   <body>
     <div id="app"></div>
