--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>散桩厂家联调测试</title><link href=/static/css/app.cf6a64c6f5bb96eaac10383d98f74b5c.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.f1bf27b4e648e3c4037e.js></script><script type=text/javascript src=/static/js/app.22f8dfdcbbd7a53f4f6d.js></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>散桩厂家联调测试</title>
+    <link href=/static/css/app.cf6a64c6f5bb96eaac10383d98f74b5c.css rel=stylesheet>
+</head>
+<body>
+<div id=app></div>
+<script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
+<script type=text/javascript src=/static/js/vendor.f1bf27b4e648e3c4037e.js></script>
+<script type=text/javascript src=/static/js/app.22f8dfdcbbd7a53f4f6d.js></script>
+</body>
+</html>
