前端页面修改

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>elec</title>
+    <title>散桩测试</title>
   </head>
   <body>
     <div id="app"></div>
